--- a/src/main/webapp/app/entities/card/card-dialog.component.html
+++ b/src/main/webapp/app/entities/card/card-dialog.component.html
@@ -78,6 +78,13 @@
                 <option [ngValue]="fieldOption.id" *ngFor="let fieldOption of fields; trackBy: trackFieldById">{{fieldOption.id}}</option>
             </select>
         </div>
+        <div class="form-group">
+            <label class="form-control-label" for="field_subject">Subject</label>
+            <select class="form-control" id="field_subject" name="subject" [(ngModel)]="card.subjectId" >
+                <option [ngValue]="null"></option>
+                <option [ngValue]="cardOption.id" *ngFor="let cardOption of cards; trackBy: trackCardById">{{cardOption.id}}</option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="clear()">
