--- a/src/main/webapp/app/entities/field/field-detail.component.html
+++ b/src/main/webapp/app/entities/field/field-detail.component.html
@@ -24,6 +24,10 @@
                 {{field.svgImageContentType}}, {{byteSize(field.svgImage)}}
             </div>
         </dd>
+        <dt><span>Layout Type</span></dt>
+        <dd>
+            <span>{{field.layoutType}}</span>
+        </dd>
     </dl>
 
     <button type="submit"
