--- a/src/main/webapp/app/entities/field/field-detail.component.html
+++ b/src/main/webapp/app/entities/field/field-detail.component.html
@@ -44,3 +44,4 @@
         <span class="fa fa-pencil"></span>&nbsp;<span> Edit</span>
     </button>
 </div>
+<jhi-card [fieldId]="fieldId"></jhi-card>
