--- a/src/main/webapp/app/entities/connection/connection.component.html
+++ b/src/main/webapp/app/entities/connection/connection.component.html
@@ -56,7 +56,7 @@
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
-                                [routerLink]="['../connection', connection.id ]"
+                                [routerLink]="['/connection', connection.id ]"
                                 class="btn btn-info btn-sm">
                             <span class="fa fa-eye"></span>
                             <span class="d-none d-md-inline">View</span>
