--- a/src/main/webapp/app/entities/field/field-detail.component.html
+++ b/src/main/webapp/app/entities/field/field-detail.component.html
@@ -71,3 +71,6 @@
         <span class="fa fa-pencil"></span>&nbsp;<span> Edit</span>
     </button>
 </div>
+<div class="col-md-8">
+    <jhi-connection [fieldId]="fieldId"></jhi-connection>
+</div>
